<resources>
    <string name="app_name">Bandhan Solution</string>
    <string name="demo_content">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit. Vivamus sodales faucibus\n dapibus. Etiam mattis leo quis laoreet dictum.</string>
    <string name="demo_title_1">কৃষি রসায়ন গ্রুপ</string>
    <string name="demo_content_1">দীর্ঘ ৫০ বছরের বেশি সময় ধরে উন্নত মানের বীজ, কীটনাশক, জৈব সার এবং আধুনিক কৃষি প্রযুক্তি, কৃষি ও কৃষকের সেবায় নিয়োজিত করে চলেছে……..</string>
    <string name="demo_title_2">কৃষি রসায়ন গ্রুপ</string>
    <string name="demo_content_2">উন্নত মানের দানা শস্য, সবজী, ফুল, ফল, তৈল বীজ এবং কন্দ ফসলের ফলনের জন্য সমস্ত রকম সহায়তা এবং উন্নত কৃষি প্রযুক্তি পরামর্শ দাতা।</string>
    <string name="demo_title_3">কৃষি রসায়ন গ্রুপ</string>
    <string name="demo_content_3">কৃষকের এবং কৃষি সহায়তাকারী খুচরো বিক্রেতাদের কৃষি সংক্রান্ত সমস্ত সমস্যার “one stop solution” (তাৎক্ষণিক সমাধান)।</string>
    <string name="demo_title">Lorem Ipsum</string>
    <string name="prev">Previous</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="share_your_exp">Share your experience</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="news">Krishirasayan News</string>
    <string name="msp">Minimum Support Price</string>
    <string name="gift_preview">Gifts for You</string>
    <string name="quick_link">Quick Connect</string>
    <string name="splash">Splash</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_connection">No Connection</string>
    <string name="google">Google</string>
    <string name="logout">Logout</string>
    <string name="facebook">Facebook</string>
    <string name="address">Address Manager</string>
    <string name="title_activity_address_list">AddressListActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_address">Add Address</string>
    <string name="update_address">Update Address</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="pick_location">Pick Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_permission_denied">Location Permission Denied. App can\'t find your location without it.</string>
    <string name="gps_provider_disabled">GPS is turned Off</string>
    <string name="gps_provider_prompt_enable">This App needs GPS functionality to get your current location.  Go to Settings to turn it On?</string>
    <string name="location_changed_map">Location Changed. Press Back to accept this location</string>
    <string name="try_again">Please try Again</string>
    <string name="location_set_to">Location set to: </string>
    <string name="location_set">Location set. Press Back to accept this Location.</string>
    <string name="trying_get_location">"Trying to get your location"</string>
    <string name="map_location_confirm">Use this location?</string>
    <string name="location_briefing">"Detected Address: %s"\n\nIf you want to choose a different location, choose \"No\" and move the marker to your desired place.</string>
    <string name="location_briefing2">Your selected location is %s.\n\nIf you want to choose a different location, choose \"No\" and move the marker to your desired place.</string>
    <string name="title_activity_maps">Map</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sample">Sample</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="could_not_read_location">Could not read location</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dummy_name">Rahul Das</string>
    <string name="dummy_datetime">13/08/2020 10:15 AM</string>
    <string name="dummy_phone_number">7222111012</string>
    <string name="dummy_email">johndoe@mail.com</string>
    <string name="dummy_address">99C Nowhere Street</string>
    <string name="weather">Weather</string>
    <string name="dummy_weather_location">Howrah, West Bengal</string>
    <string name="sym_celsius">°C</string>
    <string name="sunny">Sunny</string>
    <string name="rain">Rain</string>
    <string name="dummy_max_humidty">118.34% Max</string>
    <string name="dummy_min_humidty">80.79% Min</string>
    <string name="dummy_speed">6.35 Km/hr</string>
    <string name="dummy_wind_direction">Direction</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="sample_forecast">Light rain until afternoon</string>
    <string name="more_details"><![CDATA[Forecast >]]></string>
    <string name="sample_forecast_1">Today: Cloudy</string>
    <string name="sample_min_max_temp">34°C / 27°C</string>
    <string name="sample_forecast_2">Tomorrow: Thunderstorm</string>
    <string name="sample_forecast_3">Monday: Cloudy</string>
    <string name="dummy_date_2">Sun 09 Aug</string>
    <string name="no_rain">No Rain</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_address">My Address</string>
    <string name="nav_order">My Order</string>
    <string name="nav_invoice">My Invoice</string>
    <string name="nav_cart">My Cart</string>
    <string name="nav_product_point_upload">Product point upload</string>
    <string name="nav_my_point_sum">My point summary</string>
    <string name="nav_invoice_cart">Product point upload</string>
    <string name="nav_wishlist">Wishlist</string>
    <string name="nav_reward">My Rewards</string>
    <string name="gift">Gifts</string>
    <string name="redeem_gift">Redeem Gifts</string>
    <string name="redeem_more">Redeem More</string>
    <string name="select_gift">Select Gifts Points</string>
    <string name="our_products">Our Featured products</string>
    <string name="our_trd_products">Our Trending products</string>
    <string name="invoice_products">Invoice products</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="nav_news">News</string>
    <string name="nav_share">Share App</string>
    <string name="nav_logout">Logout</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="change">Change</string>
    <string name="upload_invoice">Upload your Invoice</string>
    <string name="choose_file">Choose file</string>
    <string name="total_bill">Total Bill</string>
    <string name="item_totoal">Item total</string>
    <string name="point_totoal">Point total</string>
    <string name="distributor">Distributor</string>
    <string name="other_fees">Other Fees</string>
    <string name="place_order">Place Order</string>
    <string name="product_point_upload">Upload product point</string>
    <string name="location">Location</string>
    <string name="cart">Cart</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="myorder">My Orders</string>
    <string name="my_invoices">My point summary</string>
    <string name="schemes">Schemes</string>
    <string name="assigned_order">Assigned Order</string>
    <string name="confirmed_order">Confirmed Order</string>
    <string name="welcome">Welcome</string>
    <string name="news_details">News Details</string>
    <string name="product_details">Product Details</string>
    <string name="order_details">Order Details</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="my_profile">My Profile</string>
    <string name="video_details">Video Details</string>
    <string name="blank" />
    <string name="view_all">View All</string>
    <string name="kisan_bazar">Bandhan Store</string>
    <string name="kisan_samachar">Agriculture Information</string>
    <string name="crop_doctor">Crop Doctor</string>
    <string name="kisan_vedika">Retailer Scheme Zone</string>
    <string name="all_orders">All Orders</string>
    <string name="done">Done</string>
    <string name="please_select_address">Please Select an Address</string>
    <string name="choose_address">Choose Address</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="please_select_invoice">Please select an invoice</string>
    <string name="dummy_number" translatable="false">1234</string>
    <string name="set_distributor" translatable="false">Set Distributor</string>
    <string name="choose_distributor">Please choose a distributor</string>
    <string name="approved_distributor">Your Approved distributor</string>
    <string name="select_distributor">Select distributor</string>
    <string name="assign">Assign</string>
    <string name="must_be_retailer">User must be retailer to set distributor</string>
    <string name="please_select_distributor">Please select distributor</string>
    <string name="err_search">Please enter two character</string>
    <string name="i_am_a">I am a</string>
    <string name="choose_your_state">Choose your state</string>
    <string name="choose_language">Choose Language</string>
    <string name="let_start">Let\'s Start</string>
    <string name="update_cart">Update Cart</string>
    <string name="earth">Earth</string>
    <string name="moon">Moon</string>
    <string name="user_verified">User has been verified</string>
    <string name="user_not_verified">User has not been verified</string>
    <string name="address_updated">Address Updated</string>
    <string name="choose_address_again">Please choose address again</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="terms_condition">Terms of use</string>
    <string name="it_is_a_54_year_olds_group">It is a 54 years old group</string>
    <string name="involved_in_agrochemicals">Involved in Agrochemicals</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">GET OTP</string>
    <string name="by_signing_in_you_are_agree">By signing in you agree with our</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">and</string>
    <string name="my_wallet">My Wallet</string>
</resources>