<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miHome"
        android:icon="@drawable/ic_home_24"
        app:showAsAction="never"
        android:title="@string/nav_home">
    </item>
    <item
        android:id="@+id/miNews"
        android:icon="@drawable/ic_baseline_newspaper_24"
        app:showAsAction="ifRoom|withText"
        android:title="@string/news">
    </item>
    <item
        android:id="@+id/miWishlist"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="ifRoom|withText"
        android:title="@string/nav_wishlist">
    </item>
    <item
        android:id="@+id/miProfile"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom|withText"
        android:title="@string/my_profile">
    </item>



</menu>