<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SetDistributorActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/approved_distributor"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/newbasecolor"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/id"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mobile"
                android:textColor="@color/white" />
        </LinearLayout>

        <ListView
            android:id="@+id/listApprovedDistributor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <Spinner
            android:id="@+id/spiDistributors"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:visibility="gone"/>

        <com.anurag.multiselectionspinner.MultiSpinner
            android:id="@+id/spinnerMultiSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/createButton"
            app:layout_constraintTop_toBottomOf="@+id/createButton"
            app:layout_constraintVertical_bias="0.129" />


        <Button
            android:id="@+id/btnAssign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/item_rounded_button_main_color"
            android:text="@string/assign"
            android:textColor="@color/white"
            android:textSize="16sp" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>